@@ -134,6 +134,10 @@ void connection_delete(struct connection *c);
 
 void connection_speak_console(struct connection *c, const char *msg);
 
+void
+connection_broadcast_servers(struct connection *c,
+                             const void *data, size_t length);
+
 void connection_broadcast_servers_except(struct connection *c,
                                          const void *data, size_t length,
                                          struct uo_server *except);
